# TJ2

./: .gitignore  Cargo.toml  README.md  assets.config.toml  package-lock.json  package.json  rolldown.config.js  rollup.config.mjs  rspack.config.mjs  rustfmt.toml  tailwind.config.js  tsconfig.json
certs/: ecdsa_certs.sh
cli/: Cargo.toml
cli/src/: db.rs  main.rs  sec.rs
cli/src/db/: migrate.rs
db/migrates/: V2__invite_update.sql
db/postgres/: init.sql
db/sqlite/: init.sql
frontend/: .gitignore  assets.config.toml
frontend/src/: App.tsx  AudioEntry.tsx  Entries.tsx  Entry.tsx  Login.tsx  Users.tsx  admin.tsx  duration.ts  groups.tsx  hooks.ts  index.tsx  journal.ts  journals.tsx  media.ts  net.ts  pages.tsx  parse.ts  roles.tsx  settings.tsx  sidebar.tsx  theme.ts  time.ts  users.tsx  utils.ts  uuid.ts  verify.tsx
frontend/src/Entry/: AudioEntry.tsx  AudioVideoEntry.tsx  FileEntry.tsx  TagEntry.tsx  audio.tsx  image.tsx  index.tsx  video.tsx
frontend/src/admin/: invites.tsx
frontend/src/api/entries/: files.ts
frontend/src/components/: audio.tsx  error.tsx  groups.tsx  image.tsx  roles.tsx  time.tsx  users.tsx
frontend/src/components/hooks/: journal.ts  timers.ts  use-mobile.tsx  user.ts
frontend/src/components/ui/: badge.tsx  calendar.tsx  collapsible.tsx  dialog.tsx  form.tsx  input.tsx  page.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  toaster.tsx  typeography.tsx
frontend/src/journals/: FileEntry.tsx  TagEntry.tsx  api.ts  audio.tsx  custom_fields.tsx  entries.tsx  forms.ts  sidebar.tsx  video.tsx
frontend/src/pages/: admin.tsx  journals.tsx  login.tsx  register.tsx  root.tsx  settings.tsx  verify.tsx
frontend/src/pages/admin/: groups.tsx  invites.tsx  roles.tsx  users.tsx
frontend/src/pages/admin/groups/: groups_id.tsx
frontend/src/pages/admin/invites/: invite_token.tsx
frontend/src/pages/admin/roles/: role_id.tsx
frontend/src/pages/admin/users/: users_id.tsx
frontend/src/pages/journals/: journals_id.tsx  share.tsx
frontend/src/pages/journals/journals_id/: entries.tsx
frontend/src/pages/journals/journals_id/entries/: entries_id.tsx
frontend/src/pages/settings/: auth.tsx  peer_client.tsx
frontend/src/settings/: auth.tsx  peer_client.tsx
frontend/src/sidebar/: admin.tsx  journals.tsx  settings.tsx
frontend/styles/: input.css
frontend/templates/pages/: base.html  entries.html  index.html  login.html  main_wrapper.html  spa.html
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  path.rs  string.rs
lib/src/sec/: pki.rs
self_signed_certs/: localhost.cnf  rsa_certs.sh
src/: cli.rs  config.rs  cookie.rs  db.rs  error.rs  fs.rs  header.rs  journal.rs  logging.rs  main.rs  net.rs  path.rs  router.rs  sec.rs  serde.rs  server.rs  state.rs  stream.rs  sync.rs  templates.rs  user.rs
src/api/: authn.rs
src/config/: meta.rs
src/db/: ids.rs  test_data.rs
src/jobs/: sync.rs
src/journal/: custom_field.rs  sharing.rs
src/net/: body.rs  cookie.rs  error.rs  header.rs  response.rs
src/router/: admin.rs  api.rs  assets.rs  auth.rs  body.rs  entries.rs  groups.rs  handles.rs  journals.rs  layer.rs  login.rs  logout.rs  macros.rs  peers.rs  register.rs  responses.rs  roles.rs  settings.rs  sync.rs  users.rs  verify.rs
src/router/admin/: groups.rs  invites.rs  roles.rs  servers.rs  users.rs
src/router/api/: authn.rs  journals.rs
src/router/api/journals/: journals_id.rs
src/router/api/journals/journals_id/: entries.rs
src/router/entries/: auth.rs  files.rs
src/router/handles/: admin.rs  journals.rs  login.rs  me.rs  settings.rs  verify.rs
src/router/handles/admin/: groups.rs  invites.rs  users.rs
src/router/handles/api/: authn.rs
src/router/handles/journals/: entries.rs  share.rs
src/router/handles/journals/entries/: files.rs  form.rs  search.rs
src/router/handles/journals/share/: invite.rs  users.rs
src/router/handles/settings/: auth.rs
src/router/journals/: entries.rs  invite.rs  share.rs
src/router/journals/entries/: auth.rs  files.rs  form.rs  search.rs
src/router/journals/share/: invite.rs  users.rs
src/router/settings/: auth.rs  peer_client.rs
src/sec/: authn.rs  authz.rs  hash.rs  mfa.rs  otp.rs  password.rs  pki.rs
src/sec/authn/: session.rs  token.rs
src/sec/mfa/: otp.rs
src/sync/: journal.rs
src/user/: client.rs  group.rs  invite.rs  peer.rs
templates/email/: validate.html
templates/pages/: login.html
