[package]
name = "TJ2"
version = "0.1.0"
edition = "2021"

[features]
rustls = ["axum-server/tls-rustls"]

[dependencies]

# -----------------------------------------------------------------------------
# serde
# -----------------------------------------------------------------------------

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.toml]
version = "0.8"

[dependencies.serde_yml]
version = "0.0"

# -----------------------------------------------------------------------------
# utility
# -----------------------------------------------------------------------------

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.thiserror]
version = "1"

[dependencies.num_cpus]
version = "1"

[dependencies.futures]
version = "0.3"

[dependencies.pin-project]
version = "1"

[dependencies.async-trait]
version = "0.1"

# -----------------------------------------------------------------------------
# security
# -----------------------------------------------------------------------------

[dependencies.sha2]
version = "0.10"

[dependencies.sha3]
version = "0.10"

[dependencies.blake3]
version = "1"

[dependencies.rand]
version = "0.8"
features = ["small_rng", "std"]

# -----------------------------------------------------------------------------
# templates
# -----------------------------------------------------------------------------

[dependencies.tera]
version = "1"

# -----------------------------------------------------------------------------
# network
# -----------------------------------------------------------------------------

[dependencies.tokio]
version = "1"
features = ["signal", "time", "rt-multi-thread", "net", "fs", "tracing"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.hyper]
version = "1"

[dependencies.axum]
version = "0.7"

[dependencies.axum-server]
git = "https://github.com/DAC098/axum-server.git"
version = "0.7"

[dependencies.tower]
version = "0.4"
features = ["timeout"]

[dependencies.tower-http]
version = "0.5"
features = ["trace"]

[dependencies.mime]
version = "0.3"

[dependencies.mime_guess]
version = "2"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

# -----------------------------------------------------------------------------
# database
# -----------------------------------------------------------------------------

[dependencies.sqlx]
version = "0.8"
default-features = false

features = [
    "sqlite",
    "json",
    "derive",
    "macros",
    "chrono",
    "runtime-tokio",
]

[dependencies.url]
version = "2"
