[package]
name = "TJ2"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls"]
rustls = ["axum-server/tls-rustls"]

# -----------------------------------------------------------------------------
# serde
# -----------------------------------------------------------------------------

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.toml]
version = "0.8"

[dependencies.serde_yml]
version = "0.0"

# -----------------------------------------------------------------------------
# utility
# -----------------------------------------------------------------------------

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.thiserror]
version = "1"

[dependencies.num_cpus]
version = "1"

[dependencies.futures]
version = "0.3"

[dependencies.pin-project]
version = "1"

[dependencies.async-trait]
version = "0.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.base64]
version = "0.22"

[dependencies.cron]
version = "0.12"

[dependencies.nanoid]
version = "0.4"

[dependencies.bytes]
version = "1"

[dependencies.uuid]
version = "1"
features = ["v4"]

# -----------------------------------------------------------------------------
# security
# -----------------------------------------------------------------------------

[dependencies.sha2]
version = "0.10"

[dependencies.sha3]
version = "0.10"

[dependencies.blake3]
version = "1"

[dependencies.rand]
version = "0.8"
features = ["small_rng", "std"]

[dependencies.argon2]
version = "0.5"

[dependencies.validator]
version = "0.18"

[dependencies.ammonia]
version = "4"

# -----------------------------------------------------------------------------
# templates
# -----------------------------------------------------------------------------

[dependencies.tera]
version = "1"

# -----------------------------------------------------------------------------
# network
# -----------------------------------------------------------------------------

[dependencies.tokio]
version = "1"
features = ["signal", "time", "rt-multi-thread", "net", "fs", "tracing"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.hyper]
version = "1"

[dependencies.axum]
version = "0.7"
features = ["macros"]

[dependencies.axum-server]
git = "https://github.com/DAC098/axum-server.git"
version = "0.7"

[dependencies.tower]
version = "0.4"
features = ["timeout"]

[dependencies.tower-http]
version = "0.5"
features = ["trace"]

[dependencies.mime]
version = "0.3"

[dependencies.mime_guess]
version = "2"

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.url]
version = "2"

[dependencies.urlencoding]
version = "2"

# -----------------------------------------------------------------------------
# database
# -----------------------------------------------------------------------------

[dependencies.sqlx]
version = "0.8"
default-features = false

features = [
    "sqlite",
    "json",
    "derive",
    "macros",
    "chrono",
    "runtime-tokio",
]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-serde_json-1", "with-chrono-0_4"]

[dependencies.deadpool-postgres]
version = "0.14"

[dependencies.postgres-types]
version = "0.2"
features = ["derive"]
