[package]
name = "TJ2"
version = "0.1.0"
edition = "2021"

[features]
default = ["rustls"]
rustls = ["axum-server/tls-rustls"]

[workspace]
members = ["cli", "lib"]

[workspace.dependencies.tj2-lib]
path = "./lib"

# -----------------------------------------------------------------------------
# serde
# -----------------------------------------------------------------------------

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_repr]
version = "0.1"

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.toml]
version = "0.8"

[workspace.dependencies.serde_yml]
version = "0.0"

# -----------------------------------------------------------------------------
# utility
# -----------------------------------------------------------------------------

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.thiserror]
version = "1"

[workspace.dependencies.num_cpus]
version = "1"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.pin-project]
version = "1"

[workspace.dependencies.async-trait]
version = "0.1"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde"]

[workspace.dependencies.base64]
version = "0.22"

[workspace.dependencies.cron]
version = "0.12"

[workspace.dependencies.nanoid]
version = "0.4"

[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.uuid]
version = "1"
features = ["v4"]

[workspace.dependencies.ringbuf]
version = "0.4"

# -----------------------------------------------------------------------------
# security
# -----------------------------------------------------------------------------

[workspace.dependencies.sha2]
version = "0.10"

[workspace.dependencies.sha3]
version = "0.10"

[workspace.dependencies.blake3]
version = "1"
features = ["serde"]

[workspace.dependencies.rand]
version = "0.8"
features = ["small_rng", "std"]

[workspace.dependencies.argon2]
version = "0.5"

[workspace.dependencies.validator]
version = "0.18"

[workspace.dependencies.ammonia]
version = "4"

[workspace.dependencies.x509-cert]
version = "0.2"

[workspace.dependencies.crypto_box]
version = "0.9.1"
features = ["chacha20"]

# -----------------------------------------------------------------------------
# templates
# -----------------------------------------------------------------------------

[workspace.dependencies.tera]
version = "1"

# -----------------------------------------------------------------------------
# network
# -----------------------------------------------------------------------------

[workspace.dependencies.tokio]
version = "1"
features = ["signal", "time", "rt-multi-thread", "net", "fs", "tracing", "io-util"]

[workspace.dependencies.tokio-util]
version = "0.7"

[workspace.dependencies.reqwest]
version = "0.12"
features = ["json"]

# -----------------------------------------------------------------------------
# logging
# -----------------------------------------------------------------------------

[workspace.dependencies.tracing]
version = "0.1"

[workspace.dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[workspace.dependencies.tracing-test]
version = "0.2"

# -----------------------------------------------------------------------------
# database
# -----------------------------------------------------------------------------

[workspace.dependencies.tokio-postgres]
version = "0.7"
features = ["with-serde_json-1", "with-chrono-0_4"]

[workspace.dependencies.postgres-types]
version = "0.2"
features = ["derive"]

# -----------------------------------------------------------------------------
# dev dependencies
# -----------------------------------------------------------------------------

[dependencies]

tj2-lib = { workspace = true }

# serde

serde = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }

# utility

clap = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
futures = { workspace = true }
pin-project = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
cron = { workspace = true }
nanoid = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
ringbuf = { workspace = true }

# security

sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
validator = { workspace = true }
ammonia = { workspace = true }
x509-cert = { workspace = true }
crypto_box = { workspace = true }

# templates

tera = { workspace = true }

# network

tokio = { workspace = true }
tokio-util = { workspace = true }
hyper = { version = "1" }
axum = { version = "0.7", features = ["macros"] }
axum-server = { git = "https://github.com/DAC098/axum-server.git", version = "0.7" }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace"] }
mime = { version = "0.3" }
mime_guess = { version = "2" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { version = "2" }
urlencoding = { version = "2" }
reqwest = { workspace = true }

# database

tokio-postgres = { workspace = true }
deadpool-postgres = { version = "0.14" }
postgres-types = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
