[package]
name = "tj2-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
crypto_box = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
bytes = { workspace = true }
